--- a/index.html
+++ b/index.html
@@ -8,13 +8,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <style>
-    /* Add your styles here */
-  </style>
 </head>
 
 <body>
-  <!-- Weather Card -->
   <div class="card">
     <div class="search">
       <input type="text" class="search-bar" placeholder="Search">
@@ -39,6 +35,7 @@
     </div>
     <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ajith31kumar/Weather-app.git">
       <img alt="github" src="./image/1632512_circle_github_round icon_icon.png" width="70" height="70"></a>
+    <p>Create by Ajith</p>
   </div>
 </body>
 <script src="script.js" ></script>
